<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Z2Music</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="button_back">Menu</string>
    <string name="button_up">Up</string>
    <string name="button_down">Down</string>
    <string name="button_right">Select</string>
    <string name="button_mute">Mute</string>
    <string name="button_voldown"> - </string>
    <string name="button_volup"> + </string>
    <string name="pref_ipaddr_name">Receiver\'s IP Address</string>
    <string name="pref_port_name">Receiver\'s Port Number</string>
    <string name="pref_sleeptime_name">Display Refresh (ms)</string>
    <string name="pref_ipaddr_def">192.168.42.107</string>
    <string name="pref_port_def">80</string>
    <string name="pref_sleeptime_def">500</string>
    <string name="pref_showpandora">Show Pandora</string>
    <string name="pref_showfavorites">Show Favorites</string>
    <string name="pref_showvolume">Show Volume Controls</string>
    <string name="title_activity_marantz_scanner">Looking &#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="button_receiverscanner">Scan Network for Receivers …</string>
    <string name="nowifi">Wifi is not enabled.</string>
    <string name="power_off1">Power is Off</string>
    <string name="power_off2">Here\'s an idea&#8230;</string>
    <string name="power_off3">Push one of the giant buttons below!</string>
    <string name="no_network1">Can\'t open stream to receiver.</string>
    <string name="no_network2"> -Wifi enabled?</string>
    <string name="no_network3"> -Correct receiver IP in the settings?</string>string>
    <string name="no_network4"> -Network Control enabled in your receiver\'s settings?</string>string>
    <string name="reload">Reload &#8230;</string>
    <string name="pandora">Pandora</string>
    <string name="favorites">Favorites</string>
    <string name="volume">Volume</string>
    <string name="connfailed">Connection Failed.</string>

</resources>
